--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div class="dds__p-2">
   <div class="dds__p-1">Primeiro componente utilizando DDS2 - Button</div>
   <div class="dds__p-1">Color Testes</div>
-  <app-button class="dds__p-2" [childer] = "buttonDefault">Defaut</app-button>
-  <app-button class="dds__p-2" [childer] = "buttonDestructive" [teste] = "destructive">Destructive</app-button>
-  <app-button class="dds__p-2" [childer] = "buttonTransactional" [teste] = "transactional">Transactional</app-button>
-  <app-button class="dds__p-2" [childer] = "buttonEditorial" [teste] = "editorial">Editorial</app-button>
-  <app-button class="dds__p-2" [childer] = "buttonEditorialLight" [teste] = "editorialLight">Editorial Light</app-button>
+  <div>
+    <app-button (click)="showMessage()" class="dds__p-2" [childer] = "buttonDefault"></app-button>
+    <app-button (click)="showMessage()" class="dds__p-2" [childer] = "buttonDestructive" [teste] = "destructive"></app-button>
+    <app-button (click)="showMessage()" class="dds__p-2" [childer] = "buttonTransactional" [teste] = "transactional"></app-button>
+    <app-button (click)="showMessage()" class="dds__p-2" [childer] = "buttonEditorial" [teste] = "editorial"></app-button>
+    <app-button (click)="showMessage()" class="dds__p-2" [childer] = "buttonEditorialLight" [teste] = "editorialLight"></app-button>
+  </div>
+  <p  class="dds__p-2" *ngIf="show">Hide Massege</p>
 </div>
