align items on page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="dds__p-2">
+<div class="dds__p-2 color-background">
   <div class="dds__p-1">Primeiro componente utilizando DDS2 - Button</div>
   <div class="dds__p-1">Color Testes</div>
   <div>
