--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
-.color-background{
+.box-options {
+    box-shadow: 5px 3px 3px #acacac;
     background-color:#d7d8d8;
     border-radius: 10px;
     max-width: 800px;
