--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="dds__button {{ teste }}">{{ childer }}</button>
+<button class="dds__button {{ colorButton }}">{{ childer }}</button>
